--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <main>
-        <img id="back-img" alt="img-fondo" src="/assets/fondo-negro.jpg" >
+        <img id="back-img" alt="img-fondo" src="https://i.postimg.cc/qqNmCR41/fondo-negro.jpg" >
         <section>
             <div class="container score-container">
                 <button class="start-btn">START</button>
